--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Lab2: Interactive ListView</string>
+    <string name="app_name">TDDC73: Laborations</string>
 </resources>
